// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Components should render basic card correctly 1`] = `
<div>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow"
    data-testid="card-main"
  >
    <div
      class="p-6 pt-0"
      data-testid="card-content"
    >
      Basic Card Content
    </div>
  </div>
</div>
`;

exports[`Card Components should render card with different content types 1`] = `
<div>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow"
    data-testid="card-main"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
      data-testid="card-header"
    >
      <div
        class="font-semibold leading-none tracking-tight"
        data-testid="card-title"
      >
        Mixed Content
      </div>
    </div>
    <div
      class="p-6 pt-0"
      data-testid="card-content"
    >
      <div
        class="space-y-4"
      >
        <p>
          Text content
        </p>
        <button
          type="button"
        >
          A button
        </button>
        <div
          class="grid grid-cols-2 gap-2"
        >
          <div>
            Grid item 1
          </div>
          <div>
            Grid item 2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Components should render card with nested content 1`] = `
<div>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow"
    data-testid="card-main"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
      data-testid="card-header"
    >
      <div
        class="font-semibold leading-none tracking-tight"
        data-testid="card-title"
      >
        Nested Content Card
      </div>
    </div>
    <div
      class="p-6 pt-0"
      data-testid="card-content"
    >
      <div
        class="rounded-xl border bg-card text-card-foreground shadow"
        data-testid="card-main"
      >
        <div
          class="flex flex-col space-y-1.5 p-6"
          data-testid="card-header"
        >
          <div
            class="font-semibold leading-none tracking-tight"
            data-testid="card-title"
          >
            Nested Card
          </div>
        </div>
        <div
          class="p-6 pt-0"
          data-testid="card-content"
        >
          Nested content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Components should render full card with all subcomponents 1`] = `
<div>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow"
    data-testid="card-main"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
      data-testid="card-header"
    >
      <div
        class="font-semibold leading-none tracking-tight"
        data-testid="card-title"
      >
        Card Title
      </div>
      <div
        class="text-sm text-muted-foreground"
      >
        Card Description
      </div>
    </div>
    <div
      class="p-6 pt-0"
      data-testid="card-content"
    >
      <p>
        Main content of the card
      </p>
    </div>
    <div
      class="flex items-center p-6 pt-0"
      data-testid="card-footer"
    >
      <p>
        Card Footer
      </p>
    </div>
  </div>
</div>
`;

exports[`Card Components should render with custom classNames 1`] = `
<div>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow custom-card"
    data-testid="card-main"
  >
    <div
      class="flex flex-col space-y-1.5 p-6 custom-header"
      data-testid="card-header"
    >
      <div
        class="font-semibold leading-none tracking-tight custom-title"
        data-testid="card-title"
      >
        Custom Title
      </div>
      <div
        class="text-sm text-muted-foreground custom-description"
      >
        Custom Description
      </div>
    </div>
    <div
      class="p-6 pt-0 custom-content"
      data-testid="card-content"
    >
      <p>
        Custom Content
      </p>
    </div>
    <div
      class="flex items-center p-6 pt-0 custom-footer"
      data-testid="card-footer"
    >
      <p>
        Custom Footer
      </p>
    </div>
  </div>
</div>
`;

exports[`Card Components should render with data-testid attributes 1`] = `
<div>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow"
    data-testid="card-main"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
      data-testid="card-header"
    >
      <div
        class="font-semibold leading-none tracking-tight"
        data-testid="card-title"
      >
        Test Title
      </div>
      <div
        class="text-sm text-muted-foreground"
        data-testid="card-description"
      >
        Test Description
      </div>
    </div>
    <div
      class="p-6 pt-0"
      data-testid="card-content"
    >
      <p>
        Test content
      </p>
    </div>
    <div
      class="flex items-center p-6 pt-0"
      data-testid="card-footer"
    >
      <p>
        Test footer
      </p>
    </div>
  </div>
</div>
`;
